--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,8 @@ header {
   max-width: 25rem;
   margin: 0 auto;
   margin-bottom: 1.25rem;
+  font-family: 'Raleway', sans-serif
+  font-size: 1.5rem;
 }
 
 /* sections and title */
