--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ nav {
 header {
   min-height: 100vh;
   background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)),
-    url(./back.jpg) center/cover no-repeat;
+    url(./background.jpg) center/cover no-repeat;
 }
 .banner {
   min-height: 100vh;
