--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,7 @@ header {
 .container h1 {
   color: var(--clr-white);
   text-transform: uppercase;
+  margin-bottom: 3rem
 }
 .container h2 {
   color: var(--clr-white);
