--- a/responsive.css
+++ b/responsive.css
@@ -57,13 +57,18 @@
       h4 {
         font-size: 1rem;
       }
+      h5 {
+        font-size: 0.75rem;
+      }
+
       body {
         font-size: 1rem;
       }
       h1,
       h2,
       h3,
-      h4 {
+      h4,
+      h5 {
         line-height: 1;
       }
     nav {
@@ -107,6 +112,7 @@
     }
     .links a:hover {
       color: var(--clr-white);
+      font-size: 1.5rem;
     }
   }
   
