--- a/styles.css
+++ b/styles.css
@@ -273,9 +273,7 @@ header {
   margin: 5vh auto;
   margin-bottom: 1.25rem;
   }
-.container a{
-  margin-bottom: 2rem;
-}
+
 
 
 /* sections and title */
@@ -285,7 +283,7 @@ header {
   text-transform: uppercase;
   padding-top: 1rem;
 }
-.title span {
+.title h2 {
   color: var(--clr-secondary);
   text-transform: uppercase;
   font-size: 2.2rem;
@@ -974,13 +972,14 @@ input[type=submit]:hover {
   text-decoration: none;
   color: inherit;
   display: block;
-  padding: 1rem;
+  padding: 0.42rem 1rem 0.42rem 1rem;
   transition: var(--transition);
 }
 
 .service-link:hover {
   background-color: #f4f4f4; /* Optional hover effect */
   transform: scale(1.02); /* Slight zoom effect */
+  color: #000; /* Darker text color for better contrast */
 }
 
 /* CTA Button Styling */
