--- a/styles.css
+++ b/styles.css
@@ -124,10 +124,10 @@ p {
 
 /*  global classes */
 
-.btn {
+/* .btn {
   text-transform: uppercase;
   background: transparent;
-  color: var(--clr-black);
+  color:  #007bff;
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
@@ -135,7 +135,7 @@ p {
   font-size: 0.875rem;
   border: 2px solid var(--clr-black);
   cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px  #007bff;
   border-radius: var(--radius);
 }
 .btn:hover {
@@ -151,7 +151,7 @@ p {
 .btn:hover {
   background: var(--clr-white);
   color: var(--clr-secondary);
-}
+} */
 /* section */
 .section {
   padding-bottom: 2rem 0;
